--- a/cpp/core/internal/BUILD
+++ b/cpp/core/internal/BUILD
@@ -83,39 +83,38 @@ cc_library(
         "wifi_lan_endpoint_channel.h",
         "wifi_lan_service_info.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     copts = ["-DCORE_ADAPTER_DLL"],
     visibility = [
-        "//core:__pkg__",
-        "//core/internal/fuzzers:__pkg__",
+        "//cpp/core:__pkg__",
+        "//cpp/core/internal/fuzzers:__pkg__",
     ],
     deps = [
         ":message_lite",
-        "//absl/base:core_headers",
-        "//absl/container:btree",
-        "//absl/container:flat_hash_map",
-        "//absl/container:flat_hash_set",
-        "//absl/functional:bind_front",
-        "//absl/memory",
-        "//absl/strings",
-        "//absl/time",
-        "//absl/types:span",
         "//connections/implementation/proto:offline_wire_formats_portable_proto",
-        "//core:core_types",
-        "//core/internal/mediums",
-        "//core/internal/mediums:utils",
-        "//core/internal/mediums/webrtc",
-        "//platform/api:comm",
-        "//platform/base",
-        "//platform/base:cancellation_flag",
-        "//platform/base:error_code_recorder",
-        "//platform/base:util",
-        "//platform/public:comm",
-        "//platform/public:logging",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/core/internal/mediums",
+        "//cpp/core/internal/mediums:utils",
+        "//cpp/core/internal/mediums/webrtc",
+        "//cpp/platform/api:comm",
+        "//cpp/platform/base",
+        "//cpp/platform/base:cancellation_flag",
+        "//cpp/platform/base:error_code_recorder",
+        "//cpp/platform/base:util",
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:logging",
+        "//cpp/platform/public:types",
         "//internal/analytics",
         "//proto:connections_enums_portable_proto",
-        "//securegcm:ukey2",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
+        "@com_google_absl//absl/types:span",
+        ":ukey2",
     ],
 )
 
@@ -124,12 +123,11 @@ cc_library(
     hdrs = [
         "message_lite.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//core:__subpackages__",
+        "//cpp/core:__subpackages__",
     ],
     deps = [
-        "//net/proto2/compat/public:proto2_lite",
+        "@com_google_protobuf//:protobuf_lite",
     ],
 )
 
@@ -147,17 +145,17 @@ cc_library(
         "simulation_user.h",
     ],
     visibility = [
-        "//core:__subpackages__",
+        "//cpp/core:__subpackages__",
     ],
     deps = [
         ":internal",
-        "//testing/base/public:gunit_for_library_testonly",
-        "//absl/functional:bind_front",
-        "//absl/strings",
-        "//core:core_types",
-        "//platform/base",
-        "//platform/base:test_util",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/platform/base",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/public:types",
+        "@com_google_googletest//:gtest_for_library_testonly",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/strings",
     ],
 )
 
@@ -190,24 +188,24 @@ cc_test(
     deps = [
         ":internal",
         ":internal_test",
-        "//testing/base/public:gunit",
-        "//testing/base/public:gunit_main",
-        "//absl/container:flat_hash_set",
-        "//absl/strings",
-        "//absl/synchronization",
-        "//absl/time",
-        "//absl/types:span",
         "//connections/implementation/proto:offline_wire_formats_portable_proto",
-        "//core:core_types",
-        "//core/internal/mediums",
-        "//core/internal/mediums:utils",
-        "//platform/base",
-        "//platform/base:test_util",
-        "//platform/impl/g3",  # build_cleaner: keep
-        "//platform/public:comm",
-        "//platform/public:logging",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/core/internal/mediums",
+        "//cpp/core/internal/mediums:utils",
+        "//cpp/platform/base",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/impl/g3",  # build_cleaner: keep
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:logging",
+        "//cpp/platform/public:types",
         "//proto:connections_enums_portable_proto",
-        "//securegcm:ukey2",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main","@com_github_protobuf_matchers//protobuf-matchers:protobuf-matchers",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/synchronization",
+        "@com_google_absl//absl/time",
+        "@com_google_absl//absl/types:span",
+        ":ukey2",
     ],
 )
