--- a/cpp/core/internal/mediums/BUILD
+++ b/cpp/core/internal/mediums/BUILD
@@ -34,29 +34,28 @@ cc_library(
         "webrtc.h",
         "wifi_lan.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//core/internal:__subpackages__",
+        "//cpp/core/internal:__subpackages__",
     ],
     deps = [
         ":utils",
-        "//absl/container:flat_hash_map",
-        "//absl/container:flat_hash_set",
-        "//absl/functional:bind_front",
-        "//absl/strings",
-        "//absl/strings:str_format",
-        "//absl/time",
         "//connections/implementation/proto:offline_wire_formats_portable_proto",
-        "//core:core_types",
-        "//core/internal/mediums/ble_v2",
-        "//core/internal/mediums/webrtc",
-        "//core/internal/mediums/webrtc:data_types",
-        "//platform/base",
-        "//platform/base:cancellation_flag",
-        "//platform/public:comm",
-        "//platform/public:logging",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/core/internal/mediums/ble_v2",
+        "//cpp/core/internal/mediums/webrtc",
+        "//cpp/core/internal/mediums/webrtc:data_types",
+        "//cpp/platform/base",
+        "//cpp/platform/base:cancellation_flag",
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:logging",
+        "//cpp/platform/public:types",
         "//proto/mediums:web_rtc_signaling_frames_cc_proto",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/time",
         "//webrtc/api:libjingle_peerconnection_api",
     ],
 )
@@ -72,18 +71,17 @@ cc_library(
         "webrtc_peer_id.h",
         "webrtc_socket.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//core/internal:__pkg__",
-        "//core/internal/mediums:__pkg__",
-        "//core/internal/mediums/webrtc:__pkg__",
+        "//cpp/core/internal:__pkg__",
+        "//cpp/core/internal/mediums:__pkg__",
+        "//cpp/core/internal/mediums/webrtc:__pkg__",
     ],
     deps = [
-        "//absl/strings",
         "//connections/implementation/proto:offline_wire_formats_portable_proto",
-        "//core/internal/mediums/webrtc:data_types",
-        "//platform/base",
-        "//platform/public:types",
+        "//cpp/core/internal/mediums/webrtc:data_types",
+        "//cpp/platform/base",
+        "//cpp/platform/public:types",
+        "@com_google_absl//absl/strings",
     ],
 )
 
@@ -102,14 +100,14 @@ cc_test(
     deps = [
         ":mediums",
         ":utils",
-        "//testing/base/public:gunit_main",
-        "//absl/strings",
-        "//absl/time",
-        "//platform/base",
-        "//platform/base:test_util",
-        "//platform/impl/g3",  # build_cleaner: keep
-        "//platform/public:comm",
-        "//platform/public:types",
+        "//cpp/platform/base",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/impl/g3",  # build_cleaner: keep
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:types",
+        "@com_google_googletest//:gtest_main","@com_github_protobuf_matchers//protobuf-matchers:protobuf-matchers",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
     ],
 )
 
@@ -128,10 +126,10 @@ cc_test(
     deps = [
         ":mediums",
         ":utils",
-        "//testing/base/public:gunit_main",
-        "//platform/base",
-        "//platform/base:test_util",
-        "//platform/impl/g3",  # build_cleaner: keep
-        "//platform/public:types",
+        "//cpp/platform/base",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/impl/g3",  # build_cleaner: keep
+        "//cpp/platform/public:types",
+        "@com_google_googletest//:gtest_main","@com_github_protobuf_matchers//protobuf-matchers:protobuf-matchers",
     ],
 )
