--- a/cpp/core/internal/mediums/webrtc/BUILD
+++ b/cpp/core/internal/mediums/webrtc/BUILD
@@ -26,22 +26,21 @@ cc_library(
         "session_description_wrapper.h",
         "signaling_frames.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     copts = ["-DCORE_ADAPTER_DLL"],
     visibility = [
-        "//core/internal:__subpackages__",
+        "//cpp/core/internal:__subpackages__",
     ],
     deps = [
         ":data_types",
-        "//absl/memory",
-        "//absl/time",
-        "//core:core_types",
-        "//core/internal/mediums:utils",
-        "//platform/base",
-        "//platform/public:comm",
-        "//platform/public:logging",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/core/internal/mediums:utils",
+        "//cpp/platform/base",
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:logging",
+        "//cpp/platform/public:types",
         "//proto/mediums:web_rtc_signaling_frames_cc_proto",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/time",
         "//webrtc/api:libjingle_peerconnection_api",
         "//third_party/webrtc/files/stable/webrtc/pc:peerconnection",
     ],
@@ -55,15 +54,14 @@ cc_library(
     hdrs = [
         "webrtc_socket_impl.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     copts = ["-DCORE_ADAPTER_DLL"],
     visibility = [
-        "//core/internal:__subpackages__",
+        "//cpp/core/internal:__subpackages__",
     ],
     deps = [
-        "//core:core_types",
-        "//platform/base",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/platform/base",
+        "//cpp/platform/public:types",
         "//webrtc/api:libjingle_peerconnection_api",
     ],
 )
@@ -83,17 +81,17 @@ cc_test(
     deps = [
         ":data_types",
         ":webrtc",
-        "//net/proto2/compat/public:proto2",
-        "//testing/base/public:gunit_main",
-        "//absl/time",
-        "//core/internal/mediums:utils",
-        "//platform/base",
-        "//platform/base:test_util",
-        "//platform/impl/g3",  # buildcleaner: keep
-        "//platform/public:comm",
-        "//platform/public:types",
+        "//cpp/core/internal/mediums:utils",
+        "//cpp/platform/base",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/impl/g3",  # buildcleaner: keep
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:types",
+        "@com_google_googletest//:gtest_main","@com_github_protobuf_matchers//protobuf-matchers:protobuf-matchers",
+        "@com_google_absl//absl/time",
         "//webrtc/api:libjingle_peerconnection_api",
         "//webrtc/api:rtc_error",
         "//webrtc/api:scoped_refptr",
+        "@com_google_protobuf//:protobuf",
     ],
 )
