--- a/cpp/platform/api/BUILD
+++ b/cpp/platform/api/BUILD
@@ -35,17 +35,16 @@ cc_library(
         "submittable_executor.h",
         "system_clock.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//platform/base:__pkg__",
-        "//platform/impl:__subpackages__",
-        "//platform/public:__pkg__",
+        "//cpp/platform/base:__pkg__",
+        "//cpp/platform/impl:__subpackages__",
+        "//cpp/platform/public:__pkg__",
     ],
     deps = [
-        "//absl/base:core_headers",
-        "//absl/strings",
-        "//absl/time",
-        "//platform/base",
+        "//cpp/platform/base",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
     ],
 )
 
@@ -61,19 +60,18 @@ cc_library(
         "wifi.h",
         "wifi_lan.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
-        "//core/internal:__subpackages__",
-        "//platform/base:__pkg__",
-        "//platform/impl:__subpackages__",
-        "//platform/public:__pkg__",
+        "//cpp/core/internal:__subpackages__",
+        "//cpp/platform/base:__pkg__",
+        "//cpp/platform/impl:__subpackages__",
+        "//cpp/platform/public:__pkg__",
     ],
     deps = [
-        "//absl/strings",
-        "//absl/types:optional",
         "//connections/implementation/proto:offline_wire_formats_portable_proto",
-        "//platform/base",
-        "//platform/base:cancellation_flag",
+        "//cpp/platform/base",
+        "//cpp/platform/base:cancellation_flag",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:optional",
         "//webrtc/api:libjingle_peerconnection_api",
     ],
 )
@@ -83,17 +81,16 @@ cc_library(
     hdrs = [
         "platform.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     visibility = [
+        "//cpp/platform/base:__pkg__",
+        "//cpp/platform/impl:__subpackages__",
+        "//cpp/platform/public:__pkg__",
         "//googlemac/iPhone/Shared/Nearby/Connections:__subpackages__",
-        "//platform/base:__pkg__",
-        "//platform/impl:__subpackages__",
-        "//platform/public:__pkg__",
     ],
     deps = [
         ":comm",
         ":types",
-        "//absl/strings",
-        "//platform/base",
+        "//cpp/platform/base",
+        "@com_google_absl//absl/strings",
     ],
 )
