--- a/internal/analytics/BUILD
+++ b/internal/analytics/BUILD
@@ -22,24 +22,23 @@ cc_library(
         "analytics_recorder.h",
         "connection_attempt_metadata_params.h",
     ],
-    compatible_with = ["//buildenv/target:non_prod"],
     copts = ["-DCORE_ADAPTER_DLL"],
     visibility = [
-        "//core:__subpackages__",
+        "//cpp/core:__subpackages__",
         "//internal/proto/analytics:__subpackages__",
     ],
     deps = [
-        "//absl/container:btree",
-        "//absl/time",
-        "//core:core_types",
-        "//core:event_logger",
-        "//platform/base",
-        "//platform/base:error_code_recorder",
-        "//platform/public:logging",
-        "//platform/public:types",
+        "//cpp/core:core_types",
+        "//cpp/core:event_logger",
+        "//cpp/platform/base",
+        "//cpp/platform/base:error_code_recorder",
+        "//cpp/platform/public:logging",
+        "//cpp/platform/public:types",
         "//internal/proto/analytics:connections_log_cc_proto",
         "//proto:connections_enums_portable_proto",
         "//proto/errorcode:error_code_enums_portable_proto",
+        "@com_google_absl//absl/container:btree",
+        "@com_google_absl//absl/time",
     ],
 )
 
@@ -52,14 +51,14 @@ cc_test(
     shard_count = 16,
     deps = [
         ":analytics",
-        "//testing/base/public:gunit_main",
-        "//absl/time",
-        "//platform/base:error_code_recorder",
-        "//platform/impl/g3",  # build_cleaner: keep
-        "//platform/public:comm",
-        "//platform/public:logging",
-        "//platform/public:types",
+        "//cpp/platform/base:error_code_recorder",
+        "//cpp/platform/impl/g3",  # build_cleaner: keep
+        "//cpp/platform/public:comm",
+        "//cpp/platform/public:logging",
+        "//cpp/platform/public:types",
         "//internal/proto/analytics:connections_log_cc_proto",
         "//proto:connections_enums_portable_proto",
+        "@com_google_googletest//:gtest_main","@com_github_protobuf_matchers//protobuf-matchers:protobuf-matchers",
+        "@com_google_absl//absl/time",
     ],
 )
