--- a/cpp/platform/impl/g3/BUILD
+++ b/cpp/platform/impl/g3/BUILD
@@ -36,16 +36,16 @@ cc_library(
     deps = [
         "//base",
         "//base:stringprintf",
-        "//absl/base:core_headers",
-        "//absl/synchronization",
-        "//absl/time",
-        "//platform/api:platform",
-        "//platform/api:types",
-        "//platform/base",
-        "//platform/base:util",
-        "//platform/impl/shared:count_down_latch",
-        "//platform/impl/shared:posix_mutex",
-        "//thread",
+        "//cpp/platform/api:platform",
+        "//cpp/platform/api:types",
+        "//cpp/platform/base",
+        "//cpp/platform/base:util",
+        "//cpp/platform/impl/shared:count_down_latch",
+        "//cpp/platform/impl/shared:posix_mutex",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/synchronization",
+        "@com_google_absl//absl/time",
+        "@com_google_nisaba//nisaba/port:thread_pool",
     ],
 )
 
@@ -69,18 +69,18 @@ cc_library(
     visibility = ["//visibility:private"],
     deps = [
         ":types",
-        "//absl/base:core_headers",
-        "//absl/container:flat_hash_map",
-        "//absl/container:flat_hash_set",
-        "//absl/strings",
-        "//absl/strings:str_format",
-        "//absl/synchronization",
-        "//platform/api:comm",
-        "//platform/base",
-        "//platform/base:cancellation_flag",
-        "//platform/base:logging",
-        "//platform/base:test_util",
-        "//platform/impl/shared:count_down_latch",
+        "//cpp/platform/api:comm",
+        "//cpp/platform/base",
+        "//cpp/platform/base:cancellation_flag",
+        "//cpp/platform/base:logging",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/impl/shared:count_down_latch",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/synchronization",
         "//webrtc/api:create_peerconnection_factory",  #buildcleaner: keep
         "//webrtc/api:libjingle_peerconnection_api",
         "//webrtc/api/task_queue:default_task_queue_factory",
@@ -95,10 +95,10 @@ cc_library(
     ],
     visibility = ["//visibility:private"],
     deps = [
-        "//absl/strings",
-        "//platform/api:types",
-        "//platform/base",
-        "//openssl:crypto",
+        "//cpp/platform/api:types",
+        "//cpp/platform/base",
+        "@com_google_absl//absl/strings",
+        "@boringssl//:crypto",
     ],
 )
 
@@ -109,8 +109,8 @@ cc_library(
         "platform.cc",
     ],
     visibility = [
-        "//core:__subpackages__",
-        "//platform:__subpackages__",
+        "//cpp/core:__subpackages__",
+        "//cpp/platform:__subpackages__",
         "//internal/analytics:__subpackages__",
         "//internal/proto/analytics:__subpackages__",
     ],
@@ -118,15 +118,15 @@ cc_library(
         ":comm",
         ":crypto",  # build_cleaner: keep
         ":types",
-        "//absl/base:core_headers",
-        "//absl/memory",
-        "//absl/strings",
-        "//absl/time",
-        "//platform/api:comm",
-        "//platform/api:platform",
-        "//platform/api:types",
-        "//platform/base:test_util",
-        "//platform/impl/shared:count_down_latch",
-        "//platform/impl/shared:file",
+        "//cpp/platform/api:comm",
+        "//cpp/platform/api:platform",
+        "//cpp/platform/api:types",
+        "//cpp/platform/base:test_util",
+        "//cpp/platform/impl/shared:count_down_latch",
+        "//cpp/platform/impl/shared:file",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
     ],
 )
